<resources>
    <string name="app_name">Trivia_App</string>
    <string name="next">NEXT</string>
    <string name="what_is_your_name">What is your name?</string>
    <string name="history">HISTORY</string>
    <string name="finish">FINISH</string>
    <string name="what_are_the_colors_in_the_indian_national_flag">What are the colors in the Indian national flag?</string>
    <string name="a_white">A) White</string>
    <string name="b_yellow">B) Yellow</string>
    <string name="c_orange">C) Orange</string>
    <string name="d_green">D) Green</string>
</resources>