<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ThirdActivity">

    <TextView
        android:id="@+id/text_view8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/checkbox1"
        android:layout_margin="20dp"
        android:text="@string/what_are_the_colors_in_the_indian_national_flag"
        android:textSize="20sp" />


    <CheckBox
        android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="20dp"
        android:text="@string/a_white"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/b_yellow"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkbox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox2"
        android:layout_marginStart="20dp"
        android:text="@string/c_orange"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/checkbox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox3"
        android:layout_marginStart="20dp"
        android:text="@string/d_green"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/checkbox4"
        android:text="@string/next"
        android:padding="5dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/next"
        />

</RelativeLayout>